[package]
name = "takoyaki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
more-asserts = "0.3.0"
rand = "0.8.5"
rand_mt = "4.2.0"
textwrap = "0.15.1"

[profile.release]
# Enable only when you use profiler.
debug = 1
