[package]
name = "takoyaki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
env_logger = "0.9.1"
flexbuffers = "2.0.0"
itertools = "0.10.5"
log = "0.4.17"
more-asserts = "0.3.0"
once_cell = "1.15.0"
paste = "1.0.9"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_mt = "4.2.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde_repr = "0.1.9"
textwrap = "0.15.1"
tokio = {version = "1.21.2", features = ["rt", "rt-multi-thread", "net", "sync", "time", "io-util"]}

[profile.release]
debug = 1
